--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kyle TM: forest/trees</title>
+  <title>Kyle TM</title>
   <link rel="stylesheet" href="/tm-stylesheet.css">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:200i,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Damion|Oswald:300&amp;display=swap" rel="stylesheet">
@@ -36,9 +36,9 @@
   <input type="hidden" value="1" name="embed"></input>
   <input type="submit" value="Subscribe"></input>
 </form></div></div>
-<a href="" class="a box"><h2 class="hiq-box">&nbsp;Hi<br />-Q</h2></a>
-<a class="b box" href=""><h2 class="plnt">PLNT<br />LYFE</h2></a>
-<a class="d box" href=""><h2 class="sss">Spiritual Sound System</h2></a>
+<a href="https://buttondown.email/hi-q" class="a box"><h2 class="hiq-box">&nbsp;Hi<br />-Q</h2></a>
+<a class="b box" href="https://buttondown.email/kylemensing"><h2 class="plnt">PLNT<br />LYFE</h2></a>
+<a class="d box" href="https://spiritualsoundsystem.kylemensing.com/"><h2 class="sss">Spiritual Sound System</h2></a>
 <div class="c box"><br /><h2 class="pod vertical-rl rotate-180"><br />Hi-Q<br />Podcast<h2><p class="plex_eli">A #100DayProject</p></div>
 </div>
   </body>
