PLNT LYFE link update

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <input type="submit" value="Subscribe"></input>
 </form></div></div>
 <a href="https://buttondown.email/hi-q" class="a box"><h2 class="hiq-box">&nbsp;Hi<br />-Q</h2></a>
-<a class="b box" href="https://buttondown.email/kylemensing"><h2 class="plnt">PLNT<br />LYFE</h2></a>
+<a class="b box" href="https://buttondown.email/PLNTLYFE"><h2 class="plnt">PLNT<br />LYFE</h2></a>
 <a class="d box" href="https://spiritualsoundsystem.kylemensing.com/"><h2 class="sss">Spiritual Sound System</h2></a>
 <div class="c box"><br /><h2 class="pod vertical-rl rotate-180"><br />Hi-Q<br />Podcast<h2><p class="plex_eli">A #100DayProject</p></div>
 </div>
