--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 <a href="https://buttondown.email/hi-q" class="a box"><h2 class="hiq-box">&nbsp;Hi<br />-Q</h2></a>
 <a class="b box" href="https://buttondown.email/PLNTLYFE"><h2 class="plnt">PLNT<br />LYFE</h2></a>
 <a class="d box" href="https://spiritualsoundsystem.kylemensing.com/"><h2 class="sss">Spiritual Sound System</h2></a>
-<div class="c box"><br /><h2 class="pod vertical-rl rotate-180"><br />Hi-Q<br />Podcast<h2><p class="plex_eli">A #100DayProject</p></div>
+<div class="c box"><h2 class="plex-semi">Summmmermmer Fridays<h2>
+  <p class="plex_eli"><a href="https://confident-lumiere-24e3cc.netlify.app" target="_blank">issue.00</a></p></div>
+  <p class="plex_eli"><a href="https://amazing-lamarr-b365f4.netlify.app" target="_blank">issue.01</a></p></div>
 </div>
   </body>
 </html>
